# pygrain

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py  pyproject.toml
cpp/: factory.cpp  factory.hpp  geometry.cpp  geometry.hpp  operations.cpp  operations.hpp  packing.cpp  packing.hpp  pygrain.hpp  pygrain_bindings.cpp  pygrain_tests.cpp  pypacking.hpp
cpp/bind/: bindings.cpp
cpp/inc/: packing.hpp  packing_geometry.hpp  particle_factory.hpp  particle_operations.hpp  pygrain.hpp
cpp/src/: packing.cpp  particle_factory.cpp  particle_operations.cpp
cpp/test/: pygrain_tests.cpp
examples/: mixed_packing.ipynb  mixed_packing.py  packing.scscript  packing_from_csv.scscript
pygrain/: __init__.py  packing.py  particles.py
pygrain/io/: __init__.py  export.py
pygrain/mesh/: __init__.py  geometry.py  mesh.py  roughness.py
pygrain/packing/: __init__.py  packing.py  particle.py
pygrain3d/: __init__.py
pygrain3d/io/: export.py
pygrain3d/mesh/: __init__.py  geometry.py  mesh.py
pygrain3d/packing/: __init__.py  packing.py
